8218147: make_walkable asserts on multiple calls

Reviewed-by: dholmes, dcubed